--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ ext {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'jonss.github.com'
-version = '0.0.1-SNAPSHOT'
+group = 'com.schimidt.graphql'
+version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 
@@ -21,9 +21,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.graphql-java:graphql-java-tools:5.2.4'
 	implementation "com.graphql-java:graphql-spring-boot-starter:$graphqlVersion"
+	implementation 'com.graphql-java:graphql-java-servlet:6.1.3'
 	implementation "com.graphql-java:graphiql-spring-boot-starter:$graphqlVersion"
 }
