--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
 	implementation "com.graphql-java:graphql-spring-boot-starter:$graphqlVersion"
 	implementation 'com.graphql-java:graphql-java-servlet:6.1.3'
 	implementation "com.graphql-java:graphiql-spring-boot-starter:$graphqlVersion"
+	compile 'com.google.guava:guava:30.1-jre'
 }
