--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+        enable_lazy_load_no_trans: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
 server:
   port: 8080
